# link_local

./: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  Cargo.toml  LICENSE  README.md  SETUP.md
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: lib.rs  state.rs
core/identity/: Cargo.toml
core/identity/src/: error.rs  identity.rs  lib.rs
core/mesh/: Cargo.toml
core/mesh/src/: adapter.rs  error.rs  lib.rs  manager.rs  mock.rs  types.rs
core/mesh/src/adapters/: linux.rs  macos.rs  mod.rs  windows.rs
core/protocol/: Cargo.toml
core/protocol/src/: codec.rs  error.rs  lib.rs  packet.rs
core/routing/: Cargo.toml
core/routing/src/: dedup.rs  error.rs  lib.rs
core/sync/: Cargo.toml
core/sync/src/: error.rs  lib.rs  state.rs
libs/utils/: Cargo.toml
libs/utils/src/: lib.rs  logger.rs
