[workspace]
resolver = "2"
members = [
    "core/mesh",
    "core/protocol",
    "core/routing",
    "core/sync",
    "core/identity",
    "apps/cli",
    "apps/desktop",
    "libs/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Abhirup Guha Roy"]
license = "MIT"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
