[package]
name = "linklocal-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
linklocal-protocol = { path = "../../core/protocol" }
linklocal-mesh = { path = "../../core/mesh" }
linklocal-routing = { path = "../../core/routing" }
linklocal-identity = { path = "../../core/identity" }
linklocal-sync = { path = "../../core/sync" }
linklocal-utils = { path = "../../libs/utils" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

# Tauri dependencies (future - placeholder comments)
# tauri = { version = "1.0", features = ["api-all"] }
# serde_json = "1.0"

[dev-dependencies]
