[package]
name = "linklocal-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2.0", features = ["batch"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "1.0"
log = "0.4"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
