[package]
name = "linklocal-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt", "sync"] }
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Cross-platform BLE abstraction
btleplug = { version = "0.11", optional = true }

# Linux BlueZ
bluer = { version = "0.16", features = ["bluetoothd"], optional = true }
zbus = { version = "4.0", optional = true }

# macOS CoreBluetooth
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }
cocoa = { version = "0.25", optional = true }

# Windows Bluetooth LE
windows = { version = "0.51", features = [
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth",
    "Foundation_Collections",
    "Foundation",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.16", features = ["bluetoothd"] }
zbus = "4.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = [
    "Devices_Bluetooth_Advertisement",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth",
    "Foundation_Collections",
    "Foundation",
] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
