[package]
name = "linklocal-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
