[package]
name = "linklocal-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
linklocal-protocol = { path = "../protocol" }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
