[package]
name = "linklocal-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
linklocal-protocol = { path = "../protocol" }
yrs = "0.16"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "sync"] }
thiserror = "1.0"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
